# Nogil-bench

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  build_docker.sh  docker-compose.yml  main.py  pyproject.toml  run_docker.sh
docs/: day1-progress.md  day2-progress.md  day3-progress.md  day4-progress.md  day5-progress.md  day6-progress.md  day6-study-guide.md  day7-benchmark-report.md  day7-progress.md  day7-study-guide.md  nogil-bench-project-guide.md
src/: main.py
src/core/: config.py  constants.py  dependencies.py  error_handlers.py  exceptions.py  lifespan.py  middleware.py  openapi.py  security.py
src/model/: benchmark.py  database.py  image.py  job.py  user.py
src/processor/: async_runner.py  frethread_runner.py  mp_runner.py  operations.py  sync_runner.py  thread_runner.py
src/router/: auth_router.py  benchmark_router.py  image_router.py  job_router.py
src/scripts/: bench_async.py  bench_baseline.py  bench_concurrency.py  bench_db_pool.py  bench_db_sqlite_limits.py  bench_db_write.py  bench_gil.py  bench_matrix.py  bench_matrix_full.py  bench_thread_safety.py  export_openapi.py  test_auth_api.sh  test_error_responses.sh  test_image_auth_api.sh  test_operations.py
src/service/: auth_service.py  benchmark_service.py  image_service.py  job_service.py
src/utility/: logger.py  timer.py
swagger/: index.html  openapi.json
tests/: conftest.py  test_auth_router.py  test_benchmark_router.py  test_db_concurrency.py  test_error_responses.py  test_image_router.py  test_integration.py  test_job_router.py  test_operations.py  test_runners.py  test_security.py  test_thread_safety.py
